--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,11 @@ dependencies:
     sdk: flutter
 
   flutter_svg: ^2.0.1
-
+  http: ^0.13.5
+  flutter_secure_storage: ^8.0.0
+  amplify_flutter: ^1.0.0
+  amplify_auth_cognito: ^1.0.0
+  flutter_spinkit: ^5.2.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -62,6 +66,11 @@ flutter:
   assets:
     - assets/
   
+  fonts:
+    - family: JetBrainsMono
+      fonts:
+        - asset: lib/styles/fonts/JetBrainsMono-Regular.ttf
+        
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
